--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<span>
+	<h1>Heading 1</h1>
+		<h2>Heading 2</h2>
+		<h3>Heading 3</h3>
+		<h4>heading 4</h4>
+		<h5>heading 5</h5>
+		<h6>heading 6</h6>
+	</span>
 
 </body>
 
